--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<p>Click the button to get your coordinates.</p>
+<p>Click the button to get your location.</p>
 
-<button onclick="getLocation()">Try It</button>
+<button onclick="getLocation()">Click It</button>
 
 <p id="demo"></p>
 
